<resources>
    <string name="app_name">UberRitz</string>
    <string name="home_starter">entrées</string>
    <string name="home_dish">Plats</string>
    <string name="home_dessert">desserts</string>
    <string name="home_starters">Entrées</string>
    <string name="home_desserts">Desserts</string>
    <string name="details_ingredients" />
    <string name="quantity" />
    <string name="detail_quantity">1</string>
    <string name="total" />
    <string name="RegiterButton">Register ?</string>
    <string name="chooseToLoginButton">J\'ai déjà un compte</string>
    <string name="register_first_name">first_name</string>
    <string name="register_last_name">Last name</string>
    <string name="lastName">last name</string>
    <string name="register_adress">adresse</string>
    <string name="register_email">email</string>
    <string name="loginButton">connexion</string>
    <string name="chooseRegisterButton">pas de compte ? créer en un.</string>
    <string name="PassCommand">Commander</string>
    <string name="Panier">Panier</string>
    <string name="ordertitle" />
    <string name="panierTitle">Panier</string>
    <string name="errorMessage">Ajoutez des articles pour commencer un panier</string>
    <string name="errorMessage2">Une fois que vous avez ajouté des plats du restaurant votre panier s\'affichera ici</string>
</resources>